# missing-license

./: .copier-answers.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  action.yml  issue_body.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/missing_license/: __init__.py  __main__.py  auth.py  issue_body.md  missing_license.py
tests/: conftest.py  test_auth.py  test_missing_license.py
